--- a/appinfo.json
+++ b/appinfo.json
@@ -7,6 +7,7 @@
   "sdkVersion": "3",
   "targetPlatforms": ["aplite", "basalt"],
   "projectType": "native",
+  "capabilities": [ "configurable" ],
   "watchapp": {
     "watchface": false
   },
