Renames and updates pins

--- a/appinfo.json
+++ b/appinfo.json
@@ -1,7 +1,7 @@
 {
   "uuid": "eab3b5d8-eeb6-4fb2-afdc-98bc49d14c95",
-  "shortName": "7-Min+",
-  "longName": "7-Min+",
+  "shortName": "7-Minute Plus",
+  "longName": "7-Minute Plus",
   "companyName": "Ycleptic Studios",
   "versionLabel": "1.0",
   "sdkVersion": "3",
